azurerm/2017-2018/day5-1vnet-1vm-windows-managed-image/azuredeploy.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vmName": {
      "type": "string",
      "defaultValue": "lab"
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_DS4_v2"
    },
    "enabledXN": {
      "type": "bool",
      "defaultValue": true
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "vagrant"
    },
    "adminPassword": {
      "type": "string",
      "defaultvalue": "Pa$$w0rd1234!"
    },
    "osImageId": {
      "type": "string"
    }
  },
  "variables": {
    "vnetName": "labvNet",
    "gatewaySubnetName": "GatewaySubnet",
    "subnet1Name": "subnet-1-default",
    "subnet2Name": "subnet-2",
    "vnetPrefix": "172.16.0.0/20",
    "gatewaySubnetPrefix": "172.16.0.0/24",
    "subnet1Prefix": "172.16.1.0/24",
    "subnet2Prefix": "172.16.2.0/24",
    "publicIPAddressType": "Static",
    "publicIPAddressName": "[concat('pip', '-', parameters('vmName'), '-', take(uniqueString(parameters('vmName')), 4))]",
    "nicName": "[concat('nic', '-', parameters('vmName'), '-', take(uniqueString(parameters('vmName')), 4))]",
    "location": "[resourceGroup().location]",
    "imagePublisher": "MicrosoftWindowsServer",
    "imageOffer": "WindowsServer",
    "nsg1Name": "AllowRDP",
    "officeIPCidr": "103.114.0.0/16",
    "homeIPCidr": "1.228.0.0/16",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',variables('vnetName'))]",
    "subnet1Ref": "[concat(variables('vnetID'),'/subnets/',variables('subnet1Name'))]"
  },
  "resources": [
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIPAddressName')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vnetName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsg1Name'))]"
      ],
      "properties": {
        "enableAcceleratedNetworking": "[parameters('enabledXN')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg1Name'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnet1Ref')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vnetName')]",
      "location": "[variables('location')]",
      "comments": "Build a Virtual Network with /20 address space",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('gatewaySubnetName')]",
            "properties": {
              "addressPrefix": "[variables('gatewaySubnetPrefix')]"
            }
          },
          {
            "name": "[variables('subnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet1Prefix')]"
            }
          },
          {
            "name": "[variables('subnet2Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet2Prefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsg1Name')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "rule_allow_rdp_from_office",
            "properties": {
              "description": "Locks inbound down to rdp default port 3389 from office",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[variables('officeIPCidr')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "rule_allow_rdp_from_home",
            "properties": {
              "description": "Locks inbound down to rdp default port 3389 from home",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[variables('homeIPCidr')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-10-01",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('vmName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('vmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "id": "[parameters('osImageId')]"
          },
          "osDisk": {
            "createOption": "FromImage",
            "diskSizeGB": 256,
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": false
          }
        }
      }
    }
  ],
  "outputs": {
    "vmPublicIP": {
      "type": "string",
      "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))).ipAddress]"
    }
  }
}
